cleaned up appendix A

--- a/writing/appendix-A-concepts-and-definitions.Rmd
+++ b/writing/appendix-A-concepts-and-definitions.Rmd
@@ -59,27 +59,27 @@ knitr::opts_chunk$set(echo = FALSE, fig.align = 'center', out.width = '100%')
 
 \noindent In statistics, random variables indicate random (i.e., unknown) quantities and are indicated with capital letters (e.g., $R$). Known values, such as realizations of random variables (i.e., known observations or instances), are indicated with lower-case letters (e.g., $r$). Using this notation, we can write the statement "the probability of random variable $R$ taking the value $r$" as $P(R = r)$.
 
-In this section, we simulate $R$ using a Gamma distribution with time-dependent (but spatially homogeneous) mean $\mu(t)$ and variance $\sigma^2(t)$, which we write as $R \sim \Gamma\big(\mu(t), \sigma^2(t)\big)$. Although Gamma distributions are more often parameterized using parameters shape and scale ($k > 0$ and $\theta > 0$) or shape and rate ($\alpha > 0$ and $\beta = 1/\theta > 0$), we use $\e(R) = k \theta$ and $\var(R) = k \theta^2$ to facilitate visualizing the simulations. However, note that $\e(R)$ and $\var(R)$ are not independent because the variance depends strongly on the mean (and vice-versa). As the mean approaches zero from the positive side, the variance also does: $\e(R) \rightarrow 0^+ \iff k \theta \rightarrow 0^+ \iff k \theta^2 = 0^+ \iff \var(R) = 0^+$. This assumption also holds biologically, since resources tend to be less variable when they are less abundant.
+In our simulations, we simulate $R$ using a Gamma distribution with time-dependent (but spatially homogeneous) mean $\mu(t)$ and variance $\sigma^2(t)$ (see the sections below), which we write as $R \sim \Gamma\big(\mu(t), \sigma^2(t)\big)$. Although Gamma distributions are more often parameterized using parameters shape and scale ($k > 0$ and $\theta > 0$) or shape and rate ($\alpha > 0$ and $\beta = 1/\theta > 0$), we use $\e(R) = k \theta$ and $\var(R) = k \theta^2$ to facilitate visualizing the simulations within the context of resource abundance and stochasticity. However, note that $\e(R)$ and $\var(R)$ are not independent because the variance depends strongly on the mean (and vice-versa). As the mean approaches zero from the positive side, the variance also does: $\e(R) \rightarrow 0^+ \iff k \theta \rightarrow 0^+ \iff k \theta^2 = 0^+ \iff \var(R) = 0^+$. This assumption also holds biologically, since resources tend to be less variable when they are less abundant.
 
 ## Probability distributions
 
 \noindent Random variables are defined by specifying the distribution the variable is assumed to follow (e.g., Gaussian, Gamma, Poisson, Bernoulli). Since the variable is random, it can take multiple possible values, each with different probabilities. The set or range of values which have non-zero probabilities in a distribution is referred to as the distribution's support.
 
-There are many distributions we can assign to $R$ depending on how we quantify it. For instance, if we measure $R$ using the Normalized Difference Vegetation Index [NDVI, see @pettorelli_normalized_2011], we should use a distribution with support over the interval $[-1, 1]$, since NDVI can only take on values between -1 and 1 (extremes included). However, there is no commonly used distribution with that support, so the best option is to rescale NDVI to (0, 1) and use a beta distribution (see the section below on applying this framework). Alternatively, if $R$ is the number of calories an animal is able to access from food in a given location, we can let $R$ follow a distribution with support positive real numbers, such as a Gamma or log-normal distribution. If $R$ is a discrete integer variable, such as the number of prey in a location during a period of time, we can use a Poisson or negative binomial distribution.
+There are many distributions we can assign to $R$ depending on how we quantify it. For instance, if $R$ is the number of calories an animal is able to access from food in a given location, we can let $R$ follow a distribution with support positive real numbers, such as a Gamma or log-normal distribution. Alternatively, if we measure $R$ using the Normalized Difference Vegetation Index [NDVI, see @pettorelli_normalized_2011], we should use a distribution with support over the interval $[-1, 1]$, since NDVI can only take on values between -1 and 1 (extremes included). However, there is no commonly used distribution with that support, so the best option is to rescale NDVI to (0, 1) and use a beta distribution (see the main text and Appendix C). If $R$ is a discrete integer variable, such as the number of prey in a location during a period of time, we can use a Poisson or negative binomial distribution.
 
 ## Expected resources, $\e(R)$
 
-\noindent Since the exact value of $R$ at a given time and location is unknown, comparing the magnitude in $R$ between two locations or time periods requires a quantitative measure of what value we believe $R$ will take, on average. The expectation of a random variable is the value one can expect the random variable to take, on average, in the long term. Here we use $\e(R)$ to indicate the expectation of the random variable $R$. When the mean changes over time, such as in strongly seasonal regions, we explicitly indicate that $\e(R)$ changes over time by writing $\e(R)$ as a function of time, $t$: $\e(R|t) = \mu(t)$ (Fig. A\@ref(fig:multipanel-constant-var)). We indicate the estimated average amount of resources over time by adding a caret on the symbol: $\hat \mu(t)$. Note, however, that the estimate of $\mu(t)$ and what values it can take depend on what distribution we assume $R$ follows. For a Gamma distribution, $\mu(t)$ can take any positive value, but if we use NDVI as a proxy for $R$, then $\mu(t)$ is necessarily within the interval $(-1, 1)$. See the section on modeling $R$ in the main manuscript for more information on how to choose probability distributions.
+\noindent Since the exact value of $R$ at a given time and location is unknown, comparing the magnitude in $R$ between two locations or time periods requires a quantitative measure of what values we believe $R$ will take, on average, in each of the two locations or time periods. The expectation of a random variable is the value one can expect the random variable to take, on average, over the long term. Here we use $\e(R)$ to indicate the expectation of the random variable $R$. When the mean changes over time, such as in strongly seasonal regions, we explicitly indicate that by writing $\e(R)$ as a function of time, $t$: $\e(R|t) = \mu(t)$ (Fig. A\@ref(fig:multipanel-constant-var)). If $\e(R)$ changes over time and space, we write $\e(R|t, u) = \mu(t, u)$. We indicate the estimated $\mu(t, u)$ by adding a caret on the symbol: $\hat \mu(t, u)$. Note, however, that the estimate of $\mu(t, u)$ and what values it can take depend on what distribution we assume $R$ follows. For a Gamma distribution, $\mu(t, u)$ can take any positive value, but if we use NDVI as a proxy for $R$, then $\mu(t, u)$ is necessarily within the interval $(-1, 1)$.
 
-```{r multipanel-constant-var, fig.cap="Fictitious example of variation in resources in a heterogeneous environment with constant variance (after accounting for changes in the mean). (A) Resources ($R$, orange fill) vary over time and space with a constant the variance (dot color). (B) Arbitrary definition of $R$ as following a Gamma distribution with time-varying mean $\\mu(t)$ and constant variance $\\var(R) = \\sigma^2$. The points in the central panel indicate the ralizations of $R$ in panel a.", fig.pos='!h'}
+```{r multipanel-constant-var, fig.cap="Fictitious example of variation in resources in a heterogeneous environment with constant variance around the mean. (A) Resources ($R$, orange fill) vary over time and space with a time-varying but spatially homogeneous mean ($\\mu(t)$) and constant variance (dot color). (B) $R$ follows a Gamma distribution with mean $\\mu(t)$ and constant variance $\\var(R) = \\sigma^2$. The points in the central panel indicate the ralizations of $R$ in panel a.", fig.pos='!h'}
 knitr::include_graphics('../figures/habitat-examples-constant-variance.png')
 ```
 
 ## Variance in resources, $\var(R)$
 
-\noindent In viewing resources as a random variable, we not only obtain a formal framework for describing $\e(R)$, but also the spread around $\e(R)$. A random variable's variance is a measure of its unpredictability (i.e., variability). We use the notation $\var(R)$ to indicate the variance in $R$ after accounting for changes in $\mu(t)$, and we use $\sigma^2(t)$ to indicate its function over time (with estimate $\widehat{\sigma^2}(t)$; see Fig. A\@ref(fig:multipanel-changing-var)). <!-- Consequently, while $R$ may vary within years, we define $\var(R)$ as the variation in $R$ after accounting for the fact that $R$ is (predictably) lower during some seasons and higher in others due to changes in $\sigma^2(t)$. Additionally, we distinguish between two different sources of variation. We refer to known or expected spatiotemporal differences or changes as heterogeneity, which we consider as a change in $\mu(t)$. In contrast, we use the term stochasticity for unpredictable variation (i.e., due to $\sigma^2(t)$).--> For example, the time at which berry bushes produce fruit may seem highly stochastic (i.e., unpredictable) to a young bear, but it becomes predictable as it learns to understand and predict how the mean amount of berry changes with the seasons. Still, whether next year will be a good or bad year for berries remains stochastic because it depends on factors the bear cannot predict (e.g., droughts, fires), but the bear can still expect $\sigma^2(t)$ to be lower in the winter since it does not expect to find berries (i.e., $\mu(t) \approx 0$). Also note that, like with $\mu(t)$, the estimate of $\sigma^2(t)$ and what values it can take depend on what distribution we assume $R$ follows. Figure A\@ref(fig:ex) shows four examples of Gamma distributions with different means and variances.
+\noindent In viewing resources as a random variable, we not only obtain a formal framework for describing $\e(R)$, but also the spread around $\e(R)$, which we quantify with its variance. We use the notation $\var(R)$ to indicate the variance in $R$ around the mean, i.e., after accounting for changes in $\mu(t, u)$, and we use $\sigma^2(t, u)$ to indicate its function over time and time (with estimate $\widehat{\sigma^2}(t, u)$; see Fig. A\@ref(fig:multipanel-changing-var)). For example, the time at which berry bushes produce fruit may seem highly stochastic (i.e., unpredictable) to a young bear, but it becomes predictable as it learns to understand and predict how the mean amount of berry changes with the seasons. Still, whether next year will be a good or bad year for berries remains stochastic because it depends on factors the bear cannot predict (e.g., droughts, fires), but the bear can still expect $\sigma^2(t, u)$ to be lower in the winter since berries will be hard to find (i.e., $\mu(t, u) \approx 0$). Also note that, like with $\mu(t, u)$, what values $\sigma^2(t, u)$ can take depends on what distribution we assume $R$ follows. Figures A\@ref(fig:ex-gamma) and A\@ref(fig:ex-beta) show four examples of Gamma and Beta distributions, respectively, with different means and variances.
 
-```{r multipanel-changing-var, fig.cap="Fictitious example of variation in resources in a heterogeneous environment with changing variance (even after accounting for changes in the mean). (A) Although resources ($R$, orange fill) varies over time and space, the variance (dot color) is lowest at the beginning and end of the observational period and highest when $\\e(R)$ peaks. (B) Arbitrary definition of $R$ as following a Gamma distribution with time-varying mean $\\mu(t)$ and variance $\\sigma^2(t)$. The points in the central panel indicate the ralizations of $R$ in panel a.", fig.pos='!h'}
+```{r multipanel-changing-var, fig.cap="Fictitious example of variation in resources in a heterogeneous environment with changing variance around the mean. (A) Although resources ($R$, orange fill) vary over time and space, the variance (dot color) is lowest at the beginning and end of the observational period, and it is highest when $\\mu(t)$ peaks. (B) $R$ follows a Gamma distribution with time-varying but spatially homogenous mean $\\mu(t)$ and variance $\\sigma^2(t)$. The points in the central panel indicate the ralizations of $R$ in panel a.", fig.pos='!h'}
 knitr::include_graphics('../figures/habitat-examples-changing-variance.png')
 ```
 
